<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="50dp"
    android:fillViewport="true"
    android:padding="16dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:backgroundTint="@color/lavender"
            android:padding="12dp"
            android:src="@drawable/baseline_arrow_back_24"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <ImageView
            android:id="@+id/addressImageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:scaleType="fitCenter"
            android:src="@drawable/address" />

        <EditText
            android:id="@+id/firstNameEditText"
            style="@style/Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/edittext_bkg"
            android:hint="Vorname *"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:padding="12dp" />

        <TextView
            android:id="@+id/firstNameErrorTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Der Vorname ist erforderlich!"
            android:textColor="@android:color/holo_red_light"
            android:textSize="16sp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/lastNameEditText"
            style="@style/Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/edittext_bkg"
            android:hint="Nachname *"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:padding="12dp" />

        <TextView
            android:id="@+id/lastNameErrorTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Der Nachname ist erforderlich!"
            android:textColor="@android:color/holo_red_light"
            android:textSize="16sp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/streetEditText"
            style="@style/Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/edittext_bkg"
            android:hint="Straße *"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:padding="12dp" />

        <TextView
            android:id="@+id/streetErrorTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Die Straße ist erforderlich!"
            android:textColor="@android:color/holo_red_light"
            android:textSize="16sp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/streetNrEditText"
            style="@style/Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/edittext_bkg"
            android:hint="Hausnummer *"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLength="5"
            android:padding="12dp" />

        <TextView
            android:id="@+id/streetNrErrorTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Die Straßennummer ist erforderlich!"
            android:textColor="@android:color/holo_red_light"
            android:textSize="16sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/cityTextView"
            style="@style/Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="Lingen"
            android:textSize="16sp" />


        <Spinner
            android:id="@+id/plzSpinner"
            style="@style/Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/plz_options"
            android:padding="12dp"
            android:prompt="@string/select_plz" />

        <TextView
            android:id="@+id/plzErrorTextView"
            style="@style/Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Der Postleitzahl ist erforderlich!"
            android:textColor="@android:color/holo_red_light"
            android:textSize="16sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/buttonGenerate"
            style="@style/Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:backgroundTint="@color/lavender"
            android:padding="12dp"
            android:text="QR-Code erstellen" />

        <!--
        <ImageView
            android:id="@+id/qrCodeImageView"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:scaleType="fitCenter" />
            -->

    </LinearLayout>

</ScrollView>