<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_delete_all_recipients"
        android:icon="@drawable/baseline_delete_24"
        android:title="Alle QR-Codes löschen"
        app:showAsAction="never" />
</menu>